--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,17 @@
     "@antv/g2": "^3.5.9",
     "d3": "^5.14.2",
     "echarts": "^4.5.0",
+    "qs.js": "^0.1.12",
     "view-design": "^4.0.2",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
